--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,7 @@
     <div class="container content">
       <header class="masthead">
         <h3 class="masthead-title">
-          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a><br />
+          <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>&nbsp;&nbsp;
           <!--<small>{{ site.tagline }}</small>-->
 
           {% for page in site.pages_list %}
